--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-top-loading-bar": "^2.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
