--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "concurrently": "^6.4.0",
+    "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "history": "^5.1.0",
     "react": "^17.0.2",
